--- a/blog/templates/blog/home_page.html
+++ b/blog/templates/blog/home_page.html
@@ -22,6 +22,6 @@
  </form>
 
 <h2>Comments</h2>
- User {{username}} says: {{comment}}
+ User {{comment.user}} says: {{comment.comment}}
 </body>
 </html>
